# qcheck

.github/workflows/: opam.yml
example/: dune
example/alcotest/: dune  run_alcotest.sh
example/ounit/: dune  run_ounit.sh
test/core/: dune
