(executables
 (names qCheck_ounit_test qCheck_test)
 (libraries ounit2 qcheck-ounit))

(rule
 (enabled_if (and (= %{arch_sixtyfour} true) (>= %{ocaml_version} 5)))
 (action (copy qCheck_ounit_test.expected.ocaml5.64 qCheck_ounit_test.expected)))

(rule
 (enabled_if (and (= %{arch_sixtyfour} false) (>= %{ocaml_version} 5)))
 (action (copy qCheck_ounit_test.expected.ocaml5.32 qCheck_ounit_test.expected)))

(rule
 (enabled_if (and (= %{arch_sixtyfour} true) (< %{ocaml_version} 5)))
 (action (copy qCheck_ounit_test.expected.ocaml4.64 qCheck_ounit_test.expected)))

(rule
 (enabled_if (and (= %{arch_sixtyfour} false) (< %{ocaml_version} 5)))
 (action (copy qCheck_ounit_test.expected.ocaml4.32 qCheck_ounit_test.expected)))

(rule
 (targets qCheck_ounit_test.output)
 (deps ./qCheck_ounit_test.exe)
 (enabled_if (= %{os_type} "Unix"))
 (action
  (with-accepted-exit-codes 1
   (with-stdout-to %{targets}
    (run ./run_ounit.sh -runner=sequential -seed 1234)))))

(rule
 (alias runtest)
 (package qcheck-ounit)
 (enabled_if (= %{os_type} "Unix"))
 (action (diff qCheck_ounit_test.expected qCheck_ounit_test.output)))
