(library
  (name qCheck_tests)
  (modules qCheck_tests)
  (libraries qcheck-core))

(library
  (name qCheck2_tests)
  (modules qCheck2_tests)
  (libraries qcheck-core))

(rule
 (enabled_if (and (= %{arch_sixtyfour} true) (>= %{ocaml_version} 5)))
 (action (copy qCheck_expect_test.expected.ocaml5.64 qCheck_expect_test.expected)))

(rule
 (enabled_if (and (= %{arch_sixtyfour} false) (>= %{ocaml_version} 5)))
 (action (copy qCheck_expect_test.expected.ocaml5.32 qCheck_expect_test.expected)))

(rule
 (enabled_if (and (= %{arch_sixtyfour} true) (< %{ocaml_version} 5)))
 (action (copy qCheck_expect_test.expected.ocaml4.64 qCheck_expect_test.expected)))

(rule
 (enabled_if (and (= %{arch_sixtyfour} false) (< %{ocaml_version} 5)))
 (action (copy qCheck_expect_test.expected.ocaml4.32 qCheck_expect_test.expected)))

;; implicitly compared against qCheck_expect_test.expected
(test
 (name qCheck_expect_test)
 (modules qCheck_expect_test)
 (package qcheck-core)
 (libraries qcheck-core qcheck-core.runner qCheck_tests)
 (action (run ./%{test} --no-colors -s 1234)))

(rule
 (enabled_if (and (= %{arch_sixtyfour} true) (>= %{ocaml_version} 5)))
 (action (copy qCheck2_expect_test.expected.ocaml5.64 qCheck2_expect_test.expected)))

(rule
 (enabled_if (and (= %{arch_sixtyfour} false) (>= %{ocaml_version} 5)))
 (action (copy qCheck2_expect_test.expected.ocaml5.32 qCheck2_expect_test.expected)))

(rule
 (enabled_if (and (= %{arch_sixtyfour} true) (< %{ocaml_version} 5)))
 (action (copy qCheck2_expect_test.expected.ocaml4.64 qCheck2_expect_test.expected)))

(rule
 (enabled_if (and (= %{arch_sixtyfour} false) (< %{ocaml_version} 5)))
 (action (copy qCheck2_expect_test.expected.ocaml4.32 qCheck2_expect_test.expected)))

;; implicitly compared against qCheck2_expect_test.expected
(test
 (name qCheck2_expect_test)
 (modules qCheck2_expect_test)
 (package qcheck-core)
 (libraries qcheck-core qcheck-core.runner qCheck2_tests)
 (action (run ./%{test} --no-colors -s 1234)))

(tests
  (names qCheck_unit_tests qCheck2_unit_tests)
  (modules qCheck_unit_tests qCheck2_unit_tests)
  (package qcheck-core)
  (libraries qcheck-core alcotest))

(executable
  (name shrink_benchmark)
  (modules shrink_benchmark)
  (libraries qcheck-core qcheck-core.runner qCheck_tests qCheck2_tests))
